--- a/input.css
+++ b/input.css
@@ -1,14 +1,14 @@
 @import "tailwindcss";
 
-* {
+/* * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
+} */
 
 body {
     background-color: #EEE;
-    font-family: "Roboto", sans-serif;
+    font-family: "Nunito", sans-serif;
     font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
